Refactor: Migrate from QWEN API to DashScope with Enhanced AI Integration
- Update environment configuration to use DashScope API with compatible mode
- Modify API server and client to support new DashScope/QWEN API endpoint
- Enhance error handling and request transformation for AI service integration
- Improve story generation parsing and error resilience
- Update development scripts and configuration for seamless AI service transition
- Add more robust timeout and cancellation mechanisms for AI requests

--- a/.env.example
+++ b/.env.example
@@ -9,42 +9,32 @@ SUPABASE_SERVICE_KEY=your-supabase-service-key
 # Authentication
 AUTH_SECRET=your-auth-secret
 
-# QWEN AI Configuration
-# Required for AI features - Get these from your QWEN account
-QWEN_API_KEY=sk-11ddc2d2bb13427da94c71903bd4a984
-QWEN_API_URL=https://api.qwen.ai/v1
-QWEN_MODEL=qwen-max
+# DashScope AI Configuration (Server Side)
+# Required for AI features - Get these from your Alibaba Cloud account
+DASHSCOPE_API_KEY=your-dashscope-api-key-goes-here
+QWEN_API_URL=https://dashscope-intl.aliyuncs.com/compatible-mode/v1
+QWEN_MODEL=qwen-plus
 QWEN_EMBEDDING_MODEL=text-embedding-ada-002
 
 # API Server Configuration
 API_PORT=8081
 
 # Vite Configuration
-VITE_PUBLIC_APP_URL=http://localhost:8080
+VITE_PUBLIC_APP_URL=http://localhost:5173
 
-# QWEN AI Configuration
-#--------------------------------------------------------------------
-# SERVER-SIDE VARIABLES (Node.js only)
-#--------------------------------------------------------------------
-# These variables are only accessible in server-side code (like API routes)
-# They will NOT be bundled with your client-side code
+# IMPORTANT NOTE:
+# ---------------
+# DashScope AI API access should ALWAYS go through the API proxy server
+# for proper authentication and security. Never expose your API key
+# to the client side code. The following variables are used only
+# by the server-side API proxy.
 
-QWEN_API_KEY=sk-11ddc2d2bb13427da94c71903bd4a984
-QWEN_API_URL=https://api.qwen.ai/v1
-QWEN_MODEL=qwen2.5-7b-instruct
-QWEN_EMBEDDING_MODEL=qwen2.5-embedding
-
-#--------------------------------------
-# CLIENT-SIDE VARIABLES (Browser)
-#--------------------------------------
-# These variables WILL be bundled with your client-side code
-# Must be prefixed with VITE_ to be accessible in browser code
-# Be careful not to expose sensitive data here
-
-VITE_QWEN_API_KEY=sk-11ddc2d2bb13427da94c71903bd4a984
-VITE_QWEN_API_URL=https://api.qwen.ai/v1
-VITE_QWEN_MODEL=qwen2.5-7b-instruct
-VITE_QWEN_EMBEDDING_MODEL=qwen2.5-embedding
+# Development Commands:
+# --------------------
+# Start API proxy server: npm run api-server
+# Start Vite dev server: npm run dev
+# Start both together: npm run dev:all
+# Test API connection: npm run test:api
 
 # Production deployments should use environment variables in the deployment platform
-# and should NOT include API keys in client-side code. Use the proxy configuration instead. 
+# and should NOT include API keys in client-side code. 
