--- a/.env
+++ b/.env
@@ -10,9 +10,9 @@ SUPABASE_SERVICE_KEY=your-supabase-service-key
 AUTH_SECRET=a-random-secret-key-for-authentication
 
 # QWEN AI Configuration - Update these with your actual API key and settings
-QWEN_API_KEY=your-qwen-api-key-goes-here
-QWEN_API_URL=https://api.qwen.ai/v1
-QWEN_MODEL=qwen-max
+DASHSCOPE_API_KEY=your-dashscope-api-key-goes-here
+QWEN_API_URL=https://dashscope-intl.aliyuncs.com/compatible-mode/v1
+QWEN_MODEL=qwen-plus
 QWEN_EMBEDDING_MODEL=text-embedding-ada-002
 
 # API Server Configuration
