Feat: Add Supabase verification tools and update environment configuration for integration

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,19 @@
-# Supabase credentials
-VITE_SUPABASE_URL=https://your-project-url.supabase.co
-VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
+# Supabase Configuration
+# Replace these values with your actual Supabase project credentials
+
+# Client-side variables (safe to use in browser code)
+VITE_SUPABASE_URL=https://your-project-id.supabase.co
+VITE_SUPABASE_ANON_KEY=your-anon-key
+
+# Server-side variables (NEVER expose these in client-side code)
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+SUPABASE_DB_PASSWORD=your-database-password
+
+# Optional: Database connection string (for migrations and direct database access)
+# DATABASE_URL=postgresql://postgres:your-db-password@db.your-project-id.supabase.co:5432/postgres
+
+# Optional: Supabase project reference ID (for CLI operations)
+# SUPABASE_PROJECT_ID=your-project-id
 
 # Qwen API Key
 VITE_QWEN_API_KEY=your-qwen-api-key
