--- a/package.json
+++ b/package.json
@@ -16,15 +16,44 @@
     "deploy-check-functions": "node deploy-check-functions.js",
     "fix-env": "node fix-env.js",
     "check-with-fixed-env": "node run-check-with-fixed-env.js",
-    "deploy-final-setup": "node deploy-final-setup.js"
+    "deploy-final-setup": "node deploy-final-setup.js",
+    "proxy": "node api-server.js",
+    "start": "concurrently \"node api-server.js\" \"npm run dev\"",
+    "dev": "npx vite"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slider": "^1.2.3",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/supabase-js": "^2.39.3",
+    "@tanstack/react-query": "^5.66.11",
     "chalk": "^5.3.0",
+    "concurrently": "^9.1.2",
     "dotenv": "^16.3.1",
+    "react": "^18.2.0",
+    "react-day-picker": "^9.5.1",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^7.2.0",
+    "sonner": "^2.0.1",
     "uuid": "^9.0.1"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react-swc": "^3.8.0",
+    "lovable-tagger": "^1.1.4",
+    "tailwindcss-animate": "^1.0.7",
+    "vite": "^6.2.0"
   }
 }
